welcome.lessons.welcome.bat.bool2.BlueTicket.scala.error
blueTicket:3: error: ambiguous reference to overloaded definition,
both method + in class Int of type (x: Char)Int
and  method + in class Int of type (x: Short)Int
match expected type ?
if (a+b=10 || b+c=10 || c+a= 10) 
     ^blueTicket:5: error: ambiguous reference to overloaded definition,
both method + in class Int of type (x: Char)Int
and  method + in class Int of type (x: Short)Int
match expected type ?
else if (a+b=(b+c+10) ||a+b=(a+c+10)) return 5;
          ^blueTicket:9: error: not enough arguments for method blueTicket: (a: Int, b: Int, c: Int)Int.
Unspecified value parameters a, b, c.
blueTicket();  
          ^